# dwight

./: .gitignore  README.md  pyproject.toml
src/dwight/: __init__.py  __main__.py  config.py  tokenizer.py
src/dwight/model/: __init__.py  attention.py  feed_forward.py  mla.py  moe.py  registry.py  rope.py  transformer.py  transformer_block.py
src/dwight/model/tiny/: __init__.py  attention.py  bigram_hash.py  config.py  feed_forward.py  muon.py  quantize.py  transformer.py  transformer_block.py  ttt.py  vocab_embed.py
src/dwight/server/: app.py  auth.py  generation.py  model_manager.py  routes.py  schemas.py  ui_routes.py
src/dwight/server/static/: format.js
src/dwight/server/templates/: base.html  inference.html  login.html  train.html  tune.html
src/dwight/training/: dataset.py  finetune.py  generate_dpo_prompts.py  generate_prompts.py  train.py
tests/: conftest.py  test_config.py  test_finetune.py  test_mla.py  test_model.py  test_model_registry.py  test_moe.py  test_server.py  test_server_model_select.py  test_tiny_model.py  test_tokenizer.py  test_training.py
