[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dwight"
version = "0.1.0"
description = "Transformer LLM with OpenAI-compatible API"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]",
    "tiktoken",
    "pydantic>=2",
    "click>=8",
    "jinja2>=3.0",
    "numpy",
    "tqdm",
    "requests",
    "zstandard",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.scripts]
dwight = "dwight.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
